# aerial-human-detection

./: .gitignore  CMakeLists.txt  Contents.md  Datasets.md  README.md  Setting up env for YOLO.md  YOLO.md  Yolo Deployment.md  finetune.ipynb  package.xml  setup.py  yolo.ipynb
.devcontainer/: Dockerfile  devcontainer.json  dockerfile  environment.yml  rosPkgs.list  yolo-requirements.txt
.github/workflows/: build-workflow.yaml  docker-image.yml
.obsidian/: workspace.json
launch/: launch.py  yolo_detector.launch
runs/detect/yolov8n_custom/: args.yaml
runs/detect/yolov8n_custom2/: args.yaml
runs/detect/yolov8n_custom3/: args.yaml
scripts/: camera_feed_save.py  camerafeed_record.py  cuda_test.py  live_yolo_animation_save_recordidng.py  live_yolo_display_output.py  live_yolo_publish_output.py  live_yolo_save_output.py  realtime_yolo.py  ros_sub.py  rosbag_yolo_detect.py  save_raw_camera_feed.py  te.py  test.py  test_camera.py  yolo_detector.py
workflows/: build-workflow.yaml
yolo/: Datasets.md  README.md  Setting up env for YOLO.md  data.yaml  data2.yaml  environment.yml  yolo.ipynb
yolo_fine_tune/: data.yaml  dataset.ipynb  finetune.ipynb  realtime_yolo.py  test.py
